old slurm/slurm-4083.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
src/direct_cuda_pattern.cc:56:25: warning: missing terminating '"' character [-Winvalid-pp-token]
        if( i==0 ){ std::cout<<"Initial Ugs:<<std::endl; }      
                               ^
src/direct_cuda_pattern.cc:56:25: error: expected expression
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0
r : 0

0    0.15736   0

2    0.000395632   -4.2553e-09

4    0.000395632   4.2553e-09

6    0.0552805   -4.93373e-09

8    0.0552805   4.93373e-09

10    0.000395632   -4.2553e-09

12    0.042788   0

14    0.000395632   4.2553e-09

16    0.042788   0

18    -0.00109974   1.61334e-10

20    -0.00109974   -1.61334e-10

22    0.042788   3.82615e-09

24    0.042788   -3.82615e-09

26    -0.00109974   4.79724e-11

28    -0.00109974   -4.79724e-11

30    -0.00109974   1.61334e-10

32    -0.00109974   -1.61334e-10

34    -0.00109974   -4.79724e-11

36    -0.00109974   4.79724e-11

38    0.0552805   -4.93373e-09

40    0.0552805   4.93373e-09

solution:
(0.86988600651480196824,-0.33308713579335641475)	
(-0.0082173725381631257392,-0.051974710426440057232)	
(-0.0082171906220159275647,-0.051975061198332256351)	
(0.041993941563120251725,0.033257529182900910647)	
(0.041993895769591074729,0.033257556935437880552)	
(0.0082832899095130162193,-0.047429777476681089787)	
(-0.044242005739910349182,0.021363126798528780936)	
(0.0082835730825247394504,-0.047429883774185367662)	
(-0.044241960117559736565,0.021363170085186775071)	
(0.00025199886117335151044,0.00018496992421174310349)	
(0.00025203054743194318495,0.00018908732697297818046)	
(-0.047865730191140404282,0.024036176659930783006)	
(-0.047865636633122779497,0.024036166802458264202)	
(0.0001590433222982434204,2.3499437727126639905e-06)	
(0.00015903235370042650976,2.3588696596474573002e-06)	
(0.00016006309830566710275,0.00020981683299477142516)	
(0.00016007681155198521736,0.00020980200972991769901)	
(0.00018933706524871586098,6.3746456770417058661e-05)	
(0.00018934807882498342312,6.3732983098835891723e-05)	
(0.048770849625874829192,0.034157092408392965288)	
(0.04877082190463868927,0.03415711055047525313)	


real	0m4.450s
user	0m2.624s
sys	0m1.584s
